Perf: cleanup